# chatbot-tips

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  cert.pem  config_webhook.sh  docker-compose.yml  key.pem  private.key
.github/workflows/: rust.yml
src/: main.rs
src/database/: mod.rs
src/models/: user.rs
src/repository/: user.rs  users.rs
src/services/: chatbot.rs
src/telegram/: mod.rs  models.rs  send_message.rs  telegram.rs  updates.rs
