[package]
name = "chatbot-tips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
httptest = "0.15.4"
mongodb = "2.2.0"
fake = "2.4"
rand = "0.8"
try-catch = "0.2.2"
uri-builder = "0.1.0"